{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 16,
  "lineage": "4bb4df2f-99bc-1b3c-1b65-e2095e520ca6",
  "resources": [
    {
      "module": "module.web_app",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instances",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-011899242bb902164",
            "arn": "arn:aws:ec2:us-east-1::instance/i-4cef6285c3cecb3c3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-4cef6285c3cecb3c3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-94d4ec4c68a4918b1",
            "private_dns": "ip-10-217-147-43.ec2.internal",
            "private_ip": "10.217.147.43",
            "public_dns": "ec2-54-214-130-170.compute-1.amazonaws.com",
            "public_ip": "54.214.130.170",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-4fe250005b92162eb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-81c914bee3cff3baf",
            "tags": {
              "Name": "WebServer-1"
            },
            "tags_all": {
              "Name": "WebServer-1"
            },
            "tenancy": "default"
          }
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-011899242bb902164",
            "arn": "arn:aws:ec2:us-east-1::instance/i-3cfa1a4bf8d8d3222",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-3cfa1a4bf8d8d3222",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-7c32a03199956e52b",
            "private_dns": "ip-10-70-149-217.ec2.internal",
            "private_ip": "10.70.149.217",
            "public_dns": "ec2-54-214-7-102.compute-1.amazonaws.com",
            "public_ip": "54.214.7.102",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-ac77fd9f9afe65963",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-81c914bee3cff3baf",
            "tags": {
              "Name": "WebServer-2"
            },
            "tags_all": {
              "Name": "WebServer-2"
            },
            "tenancy": "default"
          }
        }
      ]
    },
    {
      "module": "module.web_app",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instances",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:security-group/sg-97bea8b546f03f237",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-97bea8b546f03f237",
            "ingress": [],
            "name": "instance-security-group",
            "name_prefix": "",
            "owner_id": "000000000000",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-66c90a33e0b6f33c1"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.web_app",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8080,
            "id": "sgrule-2238841192",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-97bea8b546f03f237",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.web_app.aws_security_group.instances"
          ]
        }
      ]
    }
  ]
}